--- a/src/pug/index.html
+++ b/src/pug/index.html
@@ -294,6 +294,6 @@
         <script src="js/custom_cv.js"></script>
         <script src="js/bs-animation.js"></script>
         <script type="text/javascript" src="https://cdn.rawgit.com/pcooksey/bibtex-js/5ccf967/src/bibtex_js.js"></script>
-        <bibtex src="ychan_pubs.bib"></bibtex>
+        <bibtex src="assets/ychan_pubs.bib"></bibtex>
     </body>
 </html>
